done: Fix dialog height in css, Fix note contents overflowing css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,6 +119,7 @@ body {
 .note-body{
   margin: 10px 0;
   font-size: small;
+  word-break: break-word;
 }
 
 .modify-note-btns{
@@ -133,7 +134,6 @@ body {
 
 .action-dialog{
   width: 300px;
-  height: 300px;
   background-color:  #FFF740;
   border-right: 2px solid black;
   border-bottom: 2px solid black;
